feat: Implement animation panel for keyframe management and playback

--- a/athletics.html
+++ b/athletics.html
@@ -179,7 +179,7 @@
                 <div class="accordion-content" id="animation-control">
                     <div class="controls">
                         <div class="animation-controls">
-                            <button id="add-to-animation" disabled>애니메이션에 추가</button>
+                            <button id="add-to-animation" disabled>키프레임 추가</button>
                             <button id="clear-animation">애니메이션 클리어</button>
                         </div>
                         <div class="animation-timeline">
