refactor: Improve keyframe logic.

--- a/athletics.html
+++ b/athletics.html
@@ -187,6 +187,9 @@
                             <div id="timeline-container">
                                 <div id="timeline-bar"></div>
                             </div>
+                            <div style="font-size: 11px; color: #666; margin-top: 5px; text-align: center;">
+                                <strong>키프레임 편집:</strong> 좌클릭-이동 | 우클릭-삭제 | 드래그-시간조절 | <span style="color: #dc3545;">🏁 끝 키프레임 드래그-전체 길이 조절</span>
+                            </div>
                         </div>
                         <div class="animation-playback">
                             <button id="play-animation" disabled>재생</button>
