style: Relocate pose button, inline scroll bar.

--- a/athletics.html
+++ b/athletics.html
@@ -448,7 +448,7 @@
                                     placeholder="Enter pose name"
                                     maxlength="20"
                                 />
-                                <button id="save-pose">Save Pose</button>
+                                <button id="save-pose">Save</button>
                             </div>
                             <div class="pose-list-container">
                                 <select id="saved-poses">
