fix: Fix keyframe logic, edit readme.

--- a/pictogram.html
+++ b/pictogram.html
@@ -98,7 +98,7 @@
         <script type="text/javascript" src="js/poseController.js"></script>
         <script type="text/javascript" src="js/poseStorage.js"></script>
         <script type="text/javascript" src="js/animation.js"></script>
-        <script type="text/javascript" src="athletics.js"></script>
+        <script type="text/javascript" src="pictogram.js"></script>
     </head>
     <body>
         <div class="container">
